fix: Se ajusta el modelo de crear solicitud cumplido
